# random-walker

./: CMakeLists.txt  README.md
src/: bindings.cpp  types.h  utils.h  walker.cpp  walker.h
test/: sarw.py
